lsws/x86/yuv2rgb: Fix compilation with mmxext or ssse3 disabled.

Fixes ticket #8986.